# Python-PKG-Manager

./: .gitignore  README.md  build.bat  pyproject.toml
src/: manager.py
utils/: move.py  remove.py
