[tool.poetry]
name = "package manager"
version = "0.1.0"
description = "Tool to get packages from a github repo for quick use"
authors = ["somkrooz <somkrooz80@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32.3"
pyinstaller = {version = "^5.1", python="^3.10,<3.13"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
